fix: Revert broken auth and CORS changes to restore functionality